Current Turn Task adaption #8

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -540,30 +540,42 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-function getCurrentTurn(task, selectedDate) {
+function getTurnByDate(task, targetDateStr) {
   const completions = task.completions || {};
   const userOrder = [...task.users];
+  const repeat = task.repeat || "Daily";
+  const repeatLimit = repeat === "Daily" ? (task.timesPerDay || 1)
+                    : repeat === "Weekly" ? (task.timesPerWeek || 1)
+                    : repeat === "Monthly" ? (task.timesPerMonth || 1)
+                    : 1;
 
-  // For Daily 1x logic
-  if (task.repeat === "Daily" && task.timesPerDay === 1) {
-    let totalCompletions = 0;
+  const parseDate = (str) => new Date(str + "T00:00:00");
+  const formatDate = (date) => date.toISOString().split("T")[0];
 
-    Object.entries(completions).forEach(([dateStr, users]) => {
-      const dateObj = new Date(dateStr + "T00:00:00");
-      const selectedObj = new Date(selectedDate + "T00:00:00");
+  const [fromStr] = task.date.split(" to ");
+  const startDate = parseDate(fromStr);
+  const targetDate = parseDate(targetDateStr);
 
-      if (dateObj < selectedObj && Array.isArray(users)) {
-        totalCompletions += users.length;
-      }
-    });
+  let currentUserIndex = 0;
 
-    const currentIndex = totalCompletions % userOrder.length;
-    return userOrder[currentIndex];
+  for (let d = new Date(startDate); d <= targetDate; d.setDate(d.getDate() + 1)) {
+    const dateStr = formatDate(d);
+    const completedToday = Array.isArray(completions[dateStr]) ? completions[dateStr] : [];
+    const currentUser = userOrder[currentUserIndex];
+    const completedCount = completedToday.filter(u => u === currentUser).length;
+
+    if (dateStr === targetDateStr) {
+      return currentUser;
+    }
+
+    if (completedCount >= repeatLimit) {
+      currentUserIndex = (currentUserIndex + 1) % userOrder.length;
+    }
   }
 
-  // Fallback (multi per day or other repeat)
-  return task.tempTurnReplacement?.replacement || task.turn || userOrder[0];
+  return userOrder[currentUserIndex];
 }
+
 
 
 
@@ -610,7 +622,8 @@ async function loadTasksForDate(selectedDate) {
         taskDiv.dataset.taskDate = task.date;
 
         // Determine whose turn it is
-        let currentTurn = getCurrentTurn(task, selectedDate);
+        let currentTurn = getTurnByDate(task, selectedDate);
+
 
 
         // Determine repeat limit
@@ -838,7 +851,8 @@ async function showTaskDetails(task) {
     const userOrder = [...task.users];
 
     // For a "Daily" task with 1 time per day, rotate the turn based on the day difference
-    const currentUser = getCurrentTurn(task, selectedDate);
+    const currentUser = getTurnByDate(task, selectedDate);
+
 const currentIndex = userOrder.indexOf(currentUser);
 
 
