--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -974,7 +974,7 @@ function getTurnByDate(task, selectedDate) {
 
 
 
-        async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
+async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
   const userTasksDiv = document.getElementById("userTasks");
   userTasksDiv.innerHTML = "<p>Loading tasks...</p>";
 
@@ -998,44 +998,41 @@ function getTurnByDate(task, selectedDate) {
   }
 
   const userTasks = tasks.filter(task => {
-  if (!task.users?.includes(userName)) return false;
+    const dateRange = task.date.split(" to ");
+    const startDateStr = dateRange[0];
+    const startDate = parseLocalDate(startDateStr);
+    const endDateStr = dateRange[1] || "3000-01-01";
+    const endDate = parseLocalDate(endDateStr);
+    const currentDate = parseLocalDate(selectedDate);
 
-  const dateRange = task.date.split(" to ");
-  const startDateStr = dateRange[0];
-  const startDate = parseLocalDate(startDateStr);
-  const endDateStr = dateRange[1] || "3000-01-01";
-  const endDate = parseLocalDate(endDateStr);
-  const currentDate = parseLocalDate(selectedDate);
+    if (currentDate < startDate || currentDate > endDate) return false;
+    if (!Array.isArray(task.users) || task.users.length === 0) return false;
 
-  if (currentDate < startDate || currentDate > endDate) return false;
+    const completedRaw = task.completions?.[selectedDate] || [];
+    const completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
 
-  const completedRaw = task.completions?.[selectedDate] || [];
-  const completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
+    const requiredTimes =
+      task.repeat === "Daily" ? task.timesPerDay || 1 :
+      task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+      task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-  if (task.repeat === "Daily" && task.timesPerDay > 1) return true;
+    const completedTimes = completedUsers.length;
 
-  if (task.repeat === "Daily" && task.timesPerDay === 1) {
-    const completions = task.completions || {};
-    const userOrder = [...task.users];
+    // Decide turn logic
+    let currentTurn;
+    if (task.repeat === "Daily" && task.timesPerDay > 1) {
+      const userOrder = [...task.users];
+      const completionIndex = completedTimes % userOrder.length;
+      currentTurn = userOrder[completionIndex];
+    } else if (task.repeat === "Daily" && task.timesPerDay === 1) {
+      currentTurn = getTurnByDate(task, selectedDate);
+    } else {
+      currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
+    }
 
-    let totalCompletions = 0;
-    Object.entries(completions).forEach(([dateStr, users]) => {
-      const dateObj = parseLocalDate(dateStr);
-      if (dateObj < currentDate && Array.isArray(users)) {
-        totalCompletions += users.length;
-      }
-    });
-
-    const currentIndex = totalCompletions % userOrder.length;
-    const currentTurn = userOrder[currentIndex];
-
+    // Only show if this user is the currentTurn OR already completed this task
     return currentTurn === userName || completedUsers.includes(userName);
-  }
-
-  const currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
-  return currentTurn === userName || completedUsers.includes(userName);
-});
-
+  });
 
   if (userTasks.length === 0) {
     userTasksDiv.innerHTML = "<p>No tasks assigned to this bee.</p>";
@@ -1048,27 +1045,22 @@ function getTurnByDate(task, selectedDate) {
       const taskDiv = document.createElement("div");
       taskDiv.className = "task-item";
 
-      const dateRange = task.date.split(" to ");
-      const startDateStr = dateRange[0];
-      const startDate = parseLocalDate(startDateStr);
-      const currentDate = parseLocalDate(selectedDate);
+      const completedRaw = task.completions?.[selectedDate] || [];
+      const completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
+      const completedTimes = completedUsers.length;
+
+      const requiredTimes =
+        task.repeat === "Daily" ? task.timesPerDay || 1 :
+        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
       let currentTurn;
-
-      let requiredTimes = 1;
-      if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
-      if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
-      if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
-
-      let completedRaw = task.completions?.[selectedDate] || [];
-      let completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
-      let completedTimes = completedUsers.length;
-
       if (task.repeat === "Daily" && task.timesPerDay > 1) {
         const userOrder = [...task.users];
         const completionIndex = completedTimes % userOrder.length;
         currentTurn = userOrder[completionIndex];
       } else if (task.repeat === "Daily" && task.timesPerDay === 1) {
-  currentTurn = getTurnByDate(task, selectedDate);
+        currentTurn = getTurnByDate(task, selectedDate);
       } else {
         currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
       }
@@ -1160,7 +1152,6 @@ function getTurnByDate(task, selectedDate) {
     });
   }
 }
-
 
 
 
